src/test/test-models/bad/reserved/STAN_PATCH.stan
data {
  real STAN_PATCH;
}
model {
}
